# gmail_genai_v7

./: .replit  README.md  ai_service.py  app.py  compose  debug_email.py  fastapi_service.py  hello_world.py  models.py  prd.md  pyproject.toml  replit.md  routes.py  test_token_tracking.py  websocket_handler.py
email_geni_v6/: .replit  ai_service.py  cookies.txt  email_service.py  hybrid_main.py  local_auth.py  replit.md  replit_auth.py  routes.py  test_summarize.py
email_geni_v6/attached_assets/: Pasted-DEBUG-openai-base-client-Request-options-method-post-url-chat-completions-files-N-1754394651856_1754394651858.txt
email_geni_v6/static/css/: styles.css
email_geni_v6/static/js/: app.js  compose.js  websocket.js
email_geni_v6/templates/: 404.html  base.html  dashboard.html  index.html  register.html  team.html  templates.html
static/js/: app.js  collaboration.js
templates/: 403.html  500.html  analytics.html  api_documentation.html  compose.html  login.html  settings.html  team.html
