[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "anthropic>=0.60.0",
    "openai>=1.98.0",
    "sqlalchemy>=2.0.42",
    "celery>=5.5.3",
    "python-socketio>=5.13.0",
    "werkzeug>=3.1.3",
    "redis>=6.2.0",
    "websockets>=15.0.1",
    "flask-socketio>=5.5.1",
    "eventlet>=0.40.2",
    "requests>=2.32.4",
    "langchain-openai>=0.3.28",
    "langchain-anthropic>=0.3.18",
    "langchain-community>=0.3.27",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "pydantic>=2.11.7",
    "flask-wtf>=1.2.2",
]
